<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:fitsSystemWindows="true"
    tools:context=".ui.register.RegisterActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/content_back"
        android:padding="12dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/formContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.85">

        <TextView
            android:id="@+id/title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register_hello"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="0dp"/>

        <TextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_subtitle"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:autofillHints=""
            android:inputType="textPersonName"
            android:hint="@string/hint_username"
            android:background="@drawable/rounded_edittext"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="16sp"
            android:maxWidth="488dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:autofillHints=""
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:background="@drawable/rounded_edittext"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="16sp"
            android:maxWidth="488dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:autofillHints=""
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:background="@drawable/rounded_edittext"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="16sp"
            android:maxWidth="488dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"/>

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:autofillHints=""
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:background="@drawable/rounded_edittext"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="16sp"
            android:maxWidth="488dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/rounded_button"
            android:text="@string/label_register"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:maxWidth="320dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:id="@+id/dividerRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#DDDDDD" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/or_login_with"
                android:textColor="#666666"
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#DDDDDD" />
        </LinearLayout>

        <ImageView
            android:id="@+id/googleButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/login_with_google"
            android:src="@drawable/google_logo"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:maxWidth="488dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp">

            <CheckBox
                android:id="@+id/terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/termsText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#666666"
                android:textSize="14sp"
                android:padding="4dp" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/login_prompt"
        android:textColor="#666666"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>


